css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
*:not(input) {
    user-select: none;
    -webkit-user-select: none;
}
* {
    font-family: 'Roboto', sans-serif;
}
::-webkit-scrollbar {
    width: 6px;
    background: transparent;
}
::-webkit-scrollbar-thumb {
    width: 100%;
    background: transparent;
}
/* body */
body {
    width: 100%;
    height: 100vh;
    background-image: linear-gradient(
        rgb(17,97,98) 220px,
        rgb(9,14,17) 0
    );
    color: rgba(255,255,255,.9);
}
svg path:first-child {
    fill: rgb(130, 134, 137);
}
/* app */
.frame {
    max-width: 1400px;
    height: calc(100% - 30px);
    background: rgb(19,28,33);
}
@media screen and (max-width: 1440px) {
    .frame {
        max-width: 1440px;
        height: 100%;
    }
}
.clearfix::after {
    content: "";
    clear: both;
    display: table;
  }
.header {
    height: 60px;
    background: rgb(42,47,50);
}
.header svg path:first-child {
    fill: rgb(177, 179, 181);
}
.header-icons .icon,
.chat-footer .icon {
    cursor: pointer;
    transition: background-color .3s;
}
.header-icons .icon:active,
.chat-footer .icon:active {
    background-color: rgb(64,68,71);
}
.avatar {
    overflow: hidden;
    border: 1px solid #fff2;
    cursor: pointer;
}
.circle {
    width: 40px;
    height: 40px;
    min-width: 40px;
    min-height: 40px;
    border-radius: 50%;
}
.circle-big {
    width: 48px;
    height: 48px;
    border-radius: 50%;
}
.icon.read {
    margin-right: .2rem;
}
.icon.read svg path {
    fill: rgb(54,183,241);
}
/* left col */
.main-col {
    flex: 3;
    min-width: 300px;
    z-index: 3;
}
.main-col:hover ::-webkit-scrollbar-thumb {
    background: rgb(58,64,68);
}
/* notifications alert */
.notify-alert {
    height: 90px;
    background: rgb(20,83,115);
    cursor: pointer;
}
.notify-alert.active {
    display: none;
}
.notify-alert .icon {
    width: 48px;
    height: 48px;
    border-radius: 50%;
}
.notify-alert .icon  svg path:first-child {
    fill: rgb(177, 179, 181);
}
.notify-alert .alert-text h3 {
    font-weight: 400;
    font-size: 1rem;
    margin-bottom: .4rem;
}
.notify-alert .alert-text a {
    font-weight: 300;
    font-size: .9rem;
    color: rgba(255,255,255,.9);
}
.notify-alert .alert-text a:hover {
    text-decoration: underline;
}
.notify-alert .alert-text i {
    margin-left: .2rem;
    font-size: .6rem;
}
/* searchbar */
.search-bar {
    height: 50px;
    border-bottom: 1px solid #fff2;
}
.search-bar .search-area {
    height: 36px;
    border-radius: 18px;
    background: rgb(50,55,57);
}
.search-bar .icon {
    cursor: pointer;
}
.search-bar .search-icon svg path:first-child {
    fill: rgb(130, 134, 137);
}
.search-bar .back-icon i {
    color: rgb(130, 134, 137);
}
.search-bar .search-area input {
    outline: none;
    background: none;
    border: none;
    font-size: .9rem;
    font-weight: 300;
    color: rgba(255,255,255,.9);
    margin-left: 1.5rem;
}
.search-bar .search-area input::placeholder {
    color: rgb(130, 134, 137);
}
/* chat list */
.no-results {
    margin-top: 5rem;
    color: rgba(255,255,255,.6);
    font-weight: 300;
    font-size: .9rem;
}
.chat-list {
    flex: 1;
    overflow-y: scroll;
    overflow-x: hidden;
}
.chat-preview {
    height: 70px;
    cursor: pointer;
}
.chat-preview.hide {
    display: none;
}
.chat-preview .avatar {
    min-width: 48px;
}
.chat-preview .chat-info {
    flex: 1;
    border-bottom: 1px solid #fff2;
}
.chat-preview .chat-info .chat-info-top,
.chat-preview .chat-info .chat-info-bottom {
    margin: .2em 0;
}
.chat-preview .chat-info .chat-info-top h4 {
    font-size: 1rem;
    font-weight: 500;
}
.chat-preview .chat-info .chat-info-bottom h5 {
    font-size: .8rem;
    font-weight: 400;
    color: rgba(255,255,255,.6);
    white-space: nowrap;
    display: inline-block;
    width: 12vw;
    min-width: 80%;
    overflow: hidden;
    text-overflow: ellipsis;
    flex: 1;
}
.chat-preview .chat-info .chat-info-bottom h5 svg {
    margin-bottom: -.4rem;
    width: 1.2rem;
}
.chat-preview .chat-info .chat-info-bottom h5 svg path {
    fill: rgba(255,255,255,.5);
}
.chat-preview:hover .chat-info .chat-info-bottom h5 {
    min-width: 70%;
}
.chat-preview:hover {
    background: rgb(45,49,52);
}
.chat-preview.active {
    background: rgb(50,55,57);
}
.chat-info .last-msg-time {
    color: rgba(255,255,255,.6);
    font-weight: 400;
    font-size: .75rem;
}
.chat-info .icons {
    width: 50px;
    height: 20px;
}
.chat-info .menu-icon {
    color: rgb(130, 134, 137);
    right: -25px;
    transition: right .1s;
}
.chat-info .menu-icon i {
    opacity: 0;
}
.chat-info .menu {
    z-index: 1000;
    text-align: left;
    width: max-content;
    background: rgb(42,47,50);
    border-radius: 4px;
    cursor: default;
    color: rgba(255,255,255,.8);
    box-shadow: 0 0 .5rem rgba(0,0,0,0.4);
}
.chat-info .menu span {
    cursor: pointer;
}
.chat-info .menu span:hover {
    background: rgb(32,39,43);
}
.chat-info .mute-icon {
    right: 0;
    transition: right .1s;
}
.chat-preview:hover .menu-icon {
    right: 0px;
}
.chat-preview:hover .menu-icon i {
    opacity: 1;
}
.chat-preview:hover .mute-icon {
    right: 20px;
}
/* right col */
.chat-col {
    flex: 7;
}
/* landing page */
.landing-page {
    border-left: 1px solid #fff2;
    background: rgb(34,47,54);
}
.landing-content {
    align-items: center;
    max-width: 550px;
    overflow-y: auto;
}
.landing-page .landing-image {
    width: 350px;
}
.landing-page h2 {
    font-weight: 300;
    font-size: 2.5rem;
    cursor: default;
}
.landing-page p {
    font-weight: 400;
    font-size: .9rem;
    line-height: 1.5rem;
    color: rgba(255,255,255,.6);
    cursor: default;
}
.landing-page .landing-content>p {
    border-bottom: 1px solid #fff2;
}
.landing-page a {
    color: rgb(35,175,156);
}
.landing-page .bottom-bar {
    min-height: 5px;
    background: rgb(17,97,98);
}
/* chat page */
/* chat header */
.chat-header {
    border-left: 1px solid #fff2;
    z-index: 2;
    box-shadow: 0 1px 7px #000c;
}
.chat-header .user-info h4 {
    font-size: 1rem;
    font-weight: 600;
    margin: .2em 0;
}
.chat-header .user-info h5 {
    font-size: .8rem;
    font-weight: 400;
    color: rgba(255,255,255,.6);
    margin: .2em 0;
}
.chat-header .user-info {
    flex: 1;
    cursor: pointer;
}
/* chat messages */
.chat-body {
    border-left: 1px solid #fff2;
    background: rgb(13,20,24);
    flex: 1;
}
.chat-body:hover ::-webkit-scrollbar-thumb {
    background: rgb(58,64,68);
}
.chat-body .chat-background {
    background-image: url(../img/bg-chat-tile-dark_a4be512e7195b6b733d9110b408f075d.png);
    background-repeat: repeat;
    background-size: 400px;
    opacity: .07;
}
.chat-body .messages {
    overflow-y: scroll;
    max-height: 100%;
    padding-top: 1.5rem;
}
.chat-body .messages .date {
    background: rgb(29,42,48);
    border-radius: .5rem;
    width: max-content;
    font-size: .8rem;
    font-weight: 400;
    position: sticky;
    position: -webkit-sticky;
    top: -15px;
    z-index: 3;
    text-transform: uppercase;
}
.chat-body .message-row {
    margin: 0 5rem 1.5rem;
}
.chat-body .message {
    max-width: 500px;
}
.chat-body .message .msg-text {
    max-width: 100%;
    word-wrap: break-word;
    user-select: auto;
    -webkit-user-select: auto;
    font-weight: 400;
    font-size: .9rem;
    color: rgba(255,255,255,.8);
}
.chat-body .message .msg-text svg {
    margin-bottom: -.4rem;
    width: 1.2rem;
}
.chat-body .message .msg-text svg path {
    fill: rgba(255,255,255,.5);
}
.chat-body .message .msg-text.deleted,
.chat-info-bottom h5.deleted {
    color: rgba(255,255,255,.5);
    font-style: italic;
}
.chat-body .message>div {
    float: right;
    height: .5rem;
    width: 55px;
}
.chat-body .message-row.sent .message>div {
    width: 75px;
}
.chat-body .message .msg-info {
    padding: 0 0.3rem 0.3rem;
    align-items: flex-end;
}
.chat-body .message .icon.read {
    height: 1rem;
    margin-left: .2rem;
}
.chat-body .message .icon.read svg {
    width: .9rem;
}
.chat-body .message .msg-time {
    font-size: .7rem;
    font-weight: 500;
    color: rgba(255,255,255,.6);
}
.chat-body .message-row.sent {
    justify-content: flex-end;
}
.chat-body .message-row.sent .message {
    border-radius: .5rem 0 .5rem .5rem;
    background: rgb(17,97,98);
}
.chat-body .message-row.sent .message-tail {
    top: -2px;
    right: -7px;
}
.chat-body .message-row.sent .message-tail svg path {
    fill: rgb(17,97,98);
}
.chat-body .message-row.received .message-tail {
    top: -2px;
    left: -7px;
    transform: rotateX(180deg) rotateZ(180deg);
    -webkit-transform: rotateX(180deg) rotateZ(180deg);
}
.chat-body .message-row.received .message-tail svg path {
    fill: rgb(38,45,48);
}
.chat-body .message-row .menu-icon .icon {
    overflow: hidden;
}
.chat-body .message-row .menu-icon {
    top: 0;
    right: 0;
    max-width: max-content;
    padding: .5rem .5rem;
    color: rgba(255,255,255,.6);
    cursor: pointer;
    min-height: 2rem;
    min-width: 2.5rem;
    text-align: end;
    z-index: 6;
    border-radius: 0 0 .5rem 0;
}
.chat-body .message-row .menu-icon i {
    transform: translateX(50px);
    -webkit-transform: translateX(50px);
    transition: transform .1s;
    opacity: 0;
}
.chat-body .message-row .message:hover .menu-icon i {
    opacity: 1;
}
.chat-body .message-row .menu {
    background: rgb(42,47,50);
    text-align: center;
    width: max-content;
    border-radius: 4px;
    cursor: default;
    z-index: 100;
    color: rgba(255,255,255,.8);
    box-shadow: 0 0 .5rem rgba(0,0,0,0.4);
}
.chat-body .message-row.sent .menu {
    right: .5rem;
}
.chat-body .message-row.received .menu {
    left: 1rem;
}
.chat-body .message-row .menu span {
    cursor: pointer;
}
.chat-body .message-row .menu span:hover {
    background: rgb(32,39,43);
}
.chat-body .message-row .message:hover .menu-icon i {
    transform: translateX(0);
    -webkit-transform: translateX(0);
}
.chat-body .message-row.sent .message:hover .menu-icon {
    background: linear-gradient(207deg, rgba(17,97,98,1) 60%, rgba(17,97,98,0) 100%);
}
.chat-body .message-row.received {
    justify-content: flex-start;
}
.chat-body .message-row.received .message {
    border-radius: 0 .5rem .5rem .5rem;
    background: rgb(38,45,48);
}
.chat-body .message-row.received .message:hover .menu-icon {
    background: linear-gradient(207deg, rgba(38,45,48,1) 60%, rgba(38,45,48,0) 100%);
    border-radius: 0 .5rem .5rem 0;
}
/* chat input */
.chat-footer {
    border-left: 1px solid #fff2;
    height: 60px;
    background: rgb(30,36,40);
}
.chat-footer .message-area {
    height: 40px;
    border-radius: 20px;
    background: rgb(50,55,57);
}
.chat-footer input {
    outline: none;
    background: none;
    border: none;
    font-size: 1rem;
    font-weight: 300;
    color: rgba(255,255,255,.9);
    margin-left: 1.5rem;
}
.chat-footer input::placeholder {
    color: rgb(130, 134, 137);
}

